This file lists all the major user-visible changes to nullmailer.
-------------------------------------------------------------------------------
Changes in version 1.11

- Simplify (and expand) handling of ignored sendmail options.

- Fixed command-line interpretation of short options with values.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.10

- Added support for SMTPS (SMTP over SSL/TLS) and STARTTLS.

- Added support for auto-detection of login method in SMTP protocol.

- Added support for -bp (mailq) and -bs (SMTP) mode in the sendmail wrapper.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.06

- Made nullmailer-queue sync and not just flush queued files to protect
  against crashes during sensitive operations.

- Fixed handling of whitespace in quoted strings in headers.

- Fixed handling of timeouts when sending.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.05

- Fixed compilation of src/selfpipe.cc on Solaris and other OSes.

- Fixed handling of TM_HAS_ISDST on Solaris.

- Fixed a few address parsing glitches.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.04

- Fixed rewriting mail to @localhost if defaultdomain is set by not
  appending .defaultdomain to *@localhost.

- Added support for reporting the sender and recipients in mailq.
